.kube/deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kubeinfo
  namespace: default
  labels:
    app: kubeinfo
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kubeinfo
        tier: backend
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - image: gudladona87/kubeinfo:latest
        name: kubeinfo
        imagePullPolicy: Always
        resources:
          limits:
            # cpu 100 =e 1 tenth of a cpu doing processing, so think 10% utilization
            cpu: 50m
            # memory units are bytes
            memory: 256Mi
          requests:
            # cpu 100 = 1 tenth of a cpu doing processing, so think 10% utilization
            cpu: 5m
            # memory units are bytes
            memory: 64Mi
        volumeMounts:
         - name: config-volume
           readOnly: true
           mountPath: /etc/kubeinfo
      volumes:
        - name: config-volume
          configMap:
            name: kubeinfo-config
