.kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kubeinfo
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  selector:
    app: kubeinfo
