.kube/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubeinfo
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: kubeinfo.neusec.biz
    http:
      paths:
      - path: /
        backend:
          serviceName: kubeinfo
          servicePort: 8080
